<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightNovel</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start_up">StartUp</string>
    <string name="title_activity_vollist_list">VollistList</string>
    <string name="title_activity_vollist_detail">VollistDetail</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_act_download">下载管理</string>
    <string name="title_activity_act_read">ActRead</string>
    <string name="title_activity_act_setting">ActSetting</string>

    <string name="d_tv_author">作者：</string>
    <string name="d_tv_library">文库：</string>
    <string name="d_tv_count">浏览：</string>
    <string name="d_tv_illustration">插画：</string>
    <string name="d_tv_updatetime">更新：</string>
    <string name="d_tv_star">评分：无</string>
    <string name="d_tv_about">简介：</string>

    <!--设置条目-->
    <string-array name="setting_home_tab">
        <item>小说推荐</item>
        <item>我的收藏</item>
    </string-array>
    <string-array name="setting_home_tab_value">
        <item>TAB_RECOM</item>
        <item>TAB_FAVOR</item>
    </string-array>
    <string-array name="setting_sd_path">
        <item>内置SD卡</item>
        <item>外置SD卡</item>
    </string-array>
    <string-array name="setting_sd_path_value">
        <item>EXTERNAL_STORAGE</item>
        <item>SECONDARY_STORAGE</item>
    </string-array>
</resources>
