<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/iv_detail_cover"
        android:layout_width="90dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="7dp"
        android:src="@drawable/cover1185s" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="书名"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d_tv_author"
                    style="@style/textView_detail"
                    android:text="@string/d_tv_author" />

                <TextView
                    android:id="@+id/d_tv_library"
                    style="@style/textView_detail"
                    android:text="@string/d_tv_library" />

                <TextView
                    android:id="@+id/d_tv_count"
                    style="@style/textView_detail"
                    android:text="@string/d_tv_count" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/d_tv_illustration"
                    style="@style/textView_detail"
                    android:text="@string/d_tv_illustration" />

                <TextView
                    android:id="@+id/d_tv_updatetime"
                    style="@style/textView_detail"
                    android:text="@string/d_tv_updatetime" />

                <TextView
                    android:id="@+id/d_tv_star"
                    style="@style/textView_detail"
                    android:text="@string/d_tv_star" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
